apps/postgres-ha.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-ha
  annotations:
    argocd.argoproj.io/sync-wave: "2"
